--- a/src/DictionaryS.css
+++ b/src/DictionaryS.css
@@ -1,3 +1,25 @@
-.DictionaryContent{
-color:blue;
+.Dictionary {
+    max-width: 600px;
+    margin: 0 auto;
 }
+
+.Dictionary section {
+
+    box-shadow: 0px 30px 50px rgba(65, 50, 100, 0.08);
+  border-radius: 8px;
+  background: rgb(229, 237, 254);
+  margin-top: 10px;
+  padding: 40px;
+
+}
+
+.Dictionary label {
+    font-weight: 600;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-style: normal;
+    font-size: 20px;
+    color: rgb(45, 45, 194);
+    margin-bottom: 20px;
+    display: block;
+    line-height: 29px;
+  }
